--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "nodemon index.ts"
+		"dev": "nodemon socialmedia.ts"
 	},
 	"keywords": [],
 	"author": "",
